# sop-haddocks

./: CHANGELOG.md  README.md  cabal.project  sop-haddocks.cabal
src/Generics/SOP/: Haddocks.hs
src/Generics/SOP/Haddocks/: TH.hs  Util.hs
test-sop-haddocks/: Main.hs
test-sop-haddocks/Test/Demo/: Dhall.hs
test-sop-haddocks/Test/Sanity/: TH.hs
